--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,15 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
+        "larastan/larastan": "^2.0",
+        "laravel/pint": "^1.14",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "pestphp/pest": "^2.34",
+        "pestphp/pest-plugin-drift": "^2.5",
+        "pestphp/pest-plugin-laravel": "^2.3",
+        "pestphp/pest-plugin-type-coverage": "^2.8",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
@@ -45,6 +50,16 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "format": "./vendor/bin/pint",
+        "analyse": "./vendor/bin/phpstan analyse",
+        "type": "./vendor/bin/pest --type-coverage",
+        "test": "./vendor/bin/pest --parallel",
+        "ci": [
+            "@format",
+            "@analyse",
+            "@type",
+            "@test"
         ]
     },
     "extra": {
